# api/src/app.ts
@@ -6,6 +6,8 @@ import { fail } from "./middleware/fail.ts";
 import { bookNotes } from "./routes/bookNotes.ts";
 import { bookProgress } from "./routes/bookProgress.ts";
 import { books } from "./routes/books.ts";
+import { notes } from "./routes/notes.ts";
+import { stats } from "./routes/stats.ts";
 
 export const openApiInfo = {
   openapi: "3.1.0" as const,
@@ -29,5 +31,7 @@ app.use(delay);
 app.route("/", books);
 app.route("/", bookNotes);
 app.route("/", bookProgress);
+app.route("/", stats);
+app.route("/", notes);
 
 app.doc31("/doc", openApiInfo);
